# sync-repo-service

./: README.md  default_config.toml  pyproject.toml  requirements.txt
src/sync_repo_service/: __about__.py  __init__.py  __main__.py
